--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "@metamask/detect-provider": "^2.0.0"
+    "@metamask/detect-provider": "^2.0.0",
+    "web3": "^4.5.0"
   }
 }
